# pod2-kudos-email-server

./: README.md
fetch_data_lib/: Cargo.toml
fetch_data_lib/src/: lib.rs
server_setup/: .env  Cargo.toml  emails.db  group_keys.txt
server_setup/src/: main.rs
verify_proof_lib/: Cargo.toml  rust-toolchain.toml
verify_proof_lib/src/: lib.rs
