[package]
name = "server_setup"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
axum = { version = "0.7", features = ["macros"] }
lettre = { version = "0.10", features = ["smtp-transport", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
fetch_data_lib = {path = "../fetch_data_lib"}
verify_proof_lib = { path = "../verify_proof_lib"}
database_lib = { path = "../database_lib"}
serde_json = "1.0.140"

rusqlite = { version = "0.36.0", features = ["bundled"] }
chrono = { version = "0.4", features = ["unstable-locales"] }
pod2 = { git="https://github.com/0xPARC/pod2", branch = "feat/sync-send", features = ["time"]}
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2"}
anyhow = "1.0.98"
